@@ -37,7 +37,7 @@
     <properties>
         <!-- Test running configuration -->
         <maven-surefire-plugin.reuseForks>true</maven-surefire-plugin.reuseForks>
-        <maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US
+        <maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
         </maven-surefire-plugin.argLine>
         <!-- Third-party dependencies -->
         <avro.version>1.11.0</avro.version>
@@ -57,7 +57,7 @@
         <ognl.version>2.6.9</ognl.version>
         <woodstox-core-asl.version>4.4.1</woodstox-core-asl.version>
         <xmlunit.version>1.5</xmlunit.version>
-        <javassist.version>3.20.0-GA</javassist.version>
+        <javassist.version>3.28.0-GA</javassist.version>
         <json-simple.version>1.1.1</json-simple.version>
         <gson.version>2.8.5</gson.version>
         <jandex.version>2.2.2.Final</jandex.version>
@@ -498,7 +498,7 @@
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
+            <artifactId>powermock-api-mockito2</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
